Advanced CSS (10) - text-align vs color (copypaste error fix)

--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -45,14 +45,6 @@ a {
     color: var(--color-primary);
 }
 
-.section-header {
-    color: var(--section-header-align);
-}
-
-.section-tagline {
-    color: var(--color-primary);
-}
-
 body {
     font-family: var(--font-family-base);
     font-size: var(--font-size-medium);
@@ -72,4 +64,12 @@ h6 {
 
 a {
     text-decoration: none;
+}
+
+.section-header {
+    text-align: var(--section-header-align);
+}
+
+.section-tagline {
+    color: var(--color-primary);
 }
